--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.0.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^19.0.0",
+    "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
+    "wavesurfer.js": "^7.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
